--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,13 @@
   <title>CryptoTracker</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Track cryptocurrency prices and convert between different digital currencies">
+  <meta name="theme-color" content="#667eea">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="manifest" href="manifest.json">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+  <meta name="apple-mobile-web-app-title" content="CryptoTracker">
 </head>
 <body>
   <app-root></app-root>
